# rei

./: Cargo.toml  Documentation.md  README.md  models_to_check.md
Documentation/: Documentation.md
Raytracing test/: biskull.blend  spaceship.blend
Raytracing test/Generic object test/: generic.blend
Raytracing test/Wasteland/: wasteland.blend
TriTestBlend/: Uebung_07_4_Botzum_Zellentin.py  complex.blend  complex.blend1  complex2.blend  cube.blend  cubes.blend  plane.blend  plane.blend1  planes.blend  sphere.blend  spheres.blend
images/: tmp-1.ppm  tmp-2.ppm  tmp.ppm  tmp0.ppm  tmp1.ppm
models/: biskull.gltf  biskull2.gltf  complex.gltf  complex2.gltf  cube.gltf  cubes.gltf  generic.gltf  plane.gltf  plane2.gltf  planes.gltf  planes2.gltf  sphere.gltf  spheres.gltf
src/: camera.rs  intersections.rs  light_transport.rs  main.rs  maths.rs  model.rs  ray.rs
