[package]
name = "rei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
image = "0.24.5"
indicatif = "0.17.3"
#test_gltf = { path = "../test_gltf" }
gltf = { version = "1.1.0", features = ["names", "KHR_materials_ior", "KHR_materials_transmission"] }
